feat: implementar novos métodos para Usuário, Produto e Movimentação refactor: refatorar a autenticação e CORS